--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p><button class="toggle-screen2">Generator Imion</button></p>
         <p><button class="toggle-screen3">Generator postaci</button></p>
         <p><button class="toggle-screen4">Generator artefaktów</button></p>
-        <p><button class="toggle-screen5">Nic</button></p>
-        <p><button class="toggle-screen6">Nic</button></p>
+        <!-- <p><button class="toggle-screen5">Nic</button></p>
+        <p><button class="toggle-screen6">Nic</button></p> -->
     </div>
     <div class="main screen2">
         <button class="toggle-screen1">Wróć</button>
@@ -24,12 +24,12 @@
     </div>
     <div class="main screen3">
         <button class="toggle-screen1">Wróć</button>
-        <button class="hero-generator-toggle">Wygeneruj postac</button>
+        <p><button class="hero-generator-toggle">Wygeneruj postac</button></p>
         <div id="randomHero"></div>
     </div>
     <div class="main screen4">
         <button class="toggle-screen1">Wróć</button>
-        <button class="item-generator-toggle">Wygeneruj Artefakt</button>
+        <p><button class="item-generator-toggle">Wygeneruj Artefakt</button></p>
         <div id="randomItem"></div>
     </div>
     <div class="main screen5">
